# FastWebdav

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-bak  Dockerfile-client  Dockerfile-test  README.md  entrypoint-client.sh  entrypoint.sh
.github/workflows/: amd64.yml  dcoker-client.yml  encrypt.yml  macos.yml  main.yml  test.yml  windows.yml
FastAPI/: main.py  requirements-essential.txt  requirements.txt
FastAPI/models/: AliYunDrive.py  Cloudreve.py  Filebin.py  GoFile.py  Meting.py  Mp4Upload.py  NeteaseCloudMusic.py  Onedrive.py  PikPak.py  PixelDrain.py  Stariver.py  StreamTape.py  TmpLink.py  WebDAV.py
FastAPI/schemas/: schemas.py
FastAPI/templates/: index.html
src/: cache.rs  main.rs  model.rs  vfs-bak.rs  vfs-enc.rs  vfs.rs
src/utils/: aesCTR.rs  aesctr.rs  mixBase64.rs  mix_base64.rs  mod.rs
