[package]
name = "fast-webdav"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.51"
bytes = "=1.0.1"
chrono = "0.4.24"
dashmap = "=4.0.2"
futures-util = "=0.3"
headers = "=0.3.4"
hyper = { version = "0.14.26", features = ["server", "http2"] }
moka = { version = "0.9.2", default-features = false, features = ["future"] }
openssl-probe = { version = "=0.1.4", optional = true }
openssl-sys = { version = "=0.9.68", optional = true }
reqwest = { version = "0.11", features = ["blocking", "cookies", "json","multipart",] }
tokio = { version = "1", features = ["full"] }
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
serde_yaml = "0.9"
rust-ini = "0.19.0"
quick-xml = { version = "0.22", features = [ "serialize" ] }
structopt = "=0.3.22"
time = { version = "=0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
url = "=2.2.2"
dav-server = { git = "https://github.com/ykxVK8yL5L/dav-server-rs", default-features = false, features = ["hyper"] }
sha-1 = "0.10.1"
hex-literal = "0.3.4"
hmac-sha = "0.6"
base64 = "0.13.0"
md-5 = "0.10.5"
httpdate = "1.0.2"
sha2 = "0.10.6"
ring = "0.16.20"
aes = "0.8"
cipher = { version = "0.4.2", features = ["dev"] }
ctr = "0.9.2"
hex = "0.4.3"
regex = "1.8.4"

[features]
default = ["rustls-tls", "atomic64"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored", "openssl-probe", "openssl-sys"]
atomic64 = ["moka/atomic64"]

[patch.crates-io]
# #webdav-handler = { git = "https://github.com/messense/webdav-handler-rs.git", branch = "aliyundrive" }

[profile.release]
lto = true
opt-level = "z"  # Optimize for size
codegen-units = 1
